@@ -88,6 +88,9 @@ PHP 8.5 UPGRADE NOTES
     attached to a CurlMultiHandle. This includes both handles added using
     curl_multi_add_handle() and handles accepted by CURLMOPT_PUSHFUNCTION.
 
+- DOM:
+  . Added Dom\Element::insertAdjacentHTML().
+
 - PGSQL:
   . pg_close_stmt offers an alternative way to close a prepared
     statement from the DEALLOCATE sql command in that we can reuse
